Fixed wrong color on expiration date

--- a/src/app/home/account/services-connections/ebay-auth/ebay-auth.component.scss
+++ b/src/app/home/account/services-connections/ebay-auth/ebay-auth.component.scss
@@ -38,7 +38,7 @@
       }
 
       .expiration-date {
-        color: rgba(124, 251, 81, 0.63);
+        color: #69e27f;
       }
     }
 
